Lots of small edits for grammar and stuff.

--- a/sources.bib
+++ b/sources.bib
@@ -152,3 +152,21 @@ isbn="978-3-540-39757-1"
   year={1992},
   publisher={Springer}
 }
+
+@book{brillhart1988factorizations,
+  title={Factorizations of $b^n\pm1, b = 2, 3, 5, 6, 7, 10, 11, 12$ Up to High Powers},
+  author={Brillhart, John and Lehmer, Derrick H and Selfridge, John L and Tuckerman, Bryant and Wagstaff Jr, SS},
+  volume={22},
+  year={1988},
+  publisher={American Mathematical Society}
+}
+
+@article{pomerance1996multiplicative,
+  title={Multiplicative independence for random integers},
+  author={Pomerance, Carl},
+  journal={PROGRESS IN MATHEMATICS-BOSTON-},
+  volume={139},
+  pages={703--712},
+  year={1996},
+  publisher={BIRKHAEUSER}
+}
