Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,6 @@
 \usepackage{listings}
 \usepackage{setspace}
 \doublespacing
-\usepackage{amsrefs}
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{minted}
@@ -104,6 +103,9 @@ Our capacity to handle larger and larger numbers has grown considerably over the
 This number was suggested by Martin Gardener in 1977 with the claim that finding a factorization of this number would be expected to possibly take quadrillions of years\cite{garden}. But instead the pace of developments made it factorisable by 1994 \cite{atkins1994magic} by methods that we will see in this paper.  Our abilities have continued to grow. By 2020, RSA250, a 250 base 10 number of two approximately equaled sized primes, can be factored. The scale of numbers that can be proven prime is even larger. Numbers such as $  8656^{2929} + 2929^{8656}$ a number with over 30 thousand digits can be proven prime proven to be prime. 
 
 Primes play an important role in modern cryptography. An excellent example is the RSA algorithm. The goal of RSA is to do public key encryption. In public key cryptography one party Alice, publishes a public key that any one may use to send as an encrypted message to that person by performing some mathematical operation what uses the message and the public key as inputs. This operation should be such that it is 'hard' to get the original message from the result unless you have access to some other piece of information the public key publisher keeps secret called the private key. RSA relies on the assumption that factoring is a difficult problem. 
+
+In this paper, we will discuss several fundamental factoring and primality proving algorithms. For primality proving, we will look first at a collection of tests that rely on Fermat's Little theorem and the AKS primality test. The AKS primality test was the first deterministic polynomial time primality test. For factoring, we focus on Pollard's p-1 factoring method, the Quadratic Sieve, the Number Field Sieve, and the Elliptic Curve Method. Pollard's p-1 is of interest because of how the strategy it employs is similar to the central idea of the Elliptic Curve Method. The elliptic curve method and the number field sieve stand today as the fastest subexponential algorithms in our arsenal to factor a large number. 
+
 \section{Preliminaries}
 In this section, we will discuss some preliminaries that we will make frequent use of in this paper. 
 \subsection{Common Notation}
@@ -150,14 +152,17 @@ These claims should make sense. 1) is saying is $2|x$ and $2|y$ then 2 is a part
         return x * (2 ** B)
 \end{minted}
 
-\subsection{Algorithm Overview}
-In this paper, we are focused on some of the key factoring algorithms. A nature starting place in our factoring journey is trial division. Given an integer n we try and divide n by every prime p up to the square root of n. There is no need to look past $\sqrt{n}$ since if $n = ab$ and $a > \sqrt{n}$ then $b < \sqrt{n}$ so we would have encountered b first. If we have tried all these primes and none divides n then we conclude that n is prime. If we already had a list of primes up to the $\sqrt{n}$ precomputed the expected cost of trial division is the number of trial divisions we will do times the cost of division. There are about $ 2 \frac{\sqrt{n}}{ln n}$ primes less than $\sqrt{n}$ and for each we do trial division each in total yields a run time of $O(\frac{n}{ln^2 n})$ using naive division. Clearly, this is far from our goal in terms of speed so a reader might ask "Why do I care about this slow algorithm?". For one, if we want a full factorization of a number it might very well take less time to factor a small component than a more complex method. Another use for trial division, is to determine is a number is B smooth. 
-The next idea to factor a number is the Sieve of Eratosthenes, reportedly used by the ancient Greek mathematician Eratosthenes. For this algorithm we actually find the factorization of all the numbers up to a certain bound N. We create table from 1 to N and first mark $2, 4, 6, \cdots $ as divisible by two, next mark $3, 6, 9, \cdots$ as divisible by three and so on for each previously unmarked number, which is a prime,  we come across. The run time of this is only $N ln ln N +  O(N)$ which means per number this takes $ln ln N + O ( 1 )$ time which would meet our definition of a good factoring algorithm. There are two issues though. First, it is only useful if we care about the prime factorization of all the prime from 1 to N for some N, which definitely isn't always the case. If we are doing this to get the factorization of just one number it is very inefficient. Second, this procedure needs a table to hold all the numbers from 1 to N so it uses O(N) space. Modern computers have no where near enough memory to doing this for the size of prime numbers we wish to factor. 
+% \subsection{Algorithm Overview}
 
 
-The next important algorithm in the development of the factoring algorithms is Pollard's p - 1 algorithm.  We know from Fermat's little theorem that $2^{p-1} \equiv 1 mod p$ when p is a prime. Furthermore  if we had an $M = k ( p - 1 ) $ for a constant k then $2^M = 2^{ k  ( p - 1 ) } = ( 2^{ p -1 } ) ^ k \equiv 1 mod p$. If this is a particular prime p such that $p | n$ then since $ p | 2^M - 1 $ $ p | gcd ( 2^M - 1 , n )$. We can use this factor n, the trick is to pick M properly. This algorithm fails if $gcd ( 2^M - 1 , n )  = n$. This algorithm is interesting because the spirit of this algorithm is used again in the Elliptic Curve Method. 
+% Each of we will briefly discuss Pollard's p-1 factoring algoirthm especially because it conceptually leds into The algorithms we will consider are the quadratic sieve and the number field sieve. These are . We will also consider Pollards p-1 factoring algorithm which is . Finally we will develop the elliptic curve factoring method. 
+% In this paper, we are focused on some of the key factoring algorithms. A nature starting place in our factoring journey is trial division. Given an integer n we try and divide n by every prime p up to the square root of n. There is no need to look past $\sqrt{n}$ since if $n = ab$ and $a > \sqrt{n}$ then $b < \sqrt{n}$ so we would have encountered b first. If we have tried all these primes and none divides n then we conclude that n is prime. If we already had a list of primes up to the $\sqrt{n}$ precomputed the expected cost of trial division is the number of trial divisions we will do times the cost of division. There are about $ 2 \frac{\sqrt{n}}{ln n}$ primes less than $\sqrt{n}$ and for each we do trial division each in total yields a run time of $O(\frac{n}{ln^2 n})$ using naive division. Clearly, this is far from our goal in terms of speed so a reader might ask "Why do I care about this slow algorithm?". For one, if we want a full factorization of a number it might very well take less time to factor a small component than a more complex method. Another use for trial division, is to determine is a number is B smooth. 
+% The next idea to factor a number is the Sieve of Eratosthenes, reportedly used by the ancient Greek mathematician Eratosthenes. For this algorithm we actually find the factorization of all the numbers up to a certain bound N. We create table from 1 to N and first mark $2, 4, 6, \cdots $ as divisible by two, next mark $3, 6, 9, \cdots$ as divisible by three and so on for each previously unmarked number, which is a prime,  we come across. The run time of this is only $N ln ln N +  O(N)$ which means per number this takes $ln ln N + O ( 1 )$ time which would meet our definition of a good factoring algorithm. There are two issues though. First, it is only useful if we care about the prime factorization of all the prime from 1 to N for some N, which definitely isn't always the case. If we are doing this to get the factorization of just one number it is very inefficient. Second, this procedure needs a table to hold all the numbers from 1 to N so it uses O(N) space. Modern computers have no where near enough memory to doing this for the size of prime numbers we wish to factor. 
 
-The premiere method to factor a number n is called the Elliptic curve method.   Elliptic curves originally were studied by analysts in the 19th and early 20th centuries but they can be used with fantastic effectiveness in the arena of factoring. In this context what we care about is curves defined by $y^2 = x^3 + ax + b$ with a and b $\in \Z _n$ and a special point at infinity. When n is a prime this construction yields a group of points (x,y) on this curve but when n is not prime this is not a group. This factoring algorithm works over the idea of trying to finding a failure of this group via an element that is not convertible. From this failure we can actually find a factor of n. This algorithm works in an analogous way to Pollard's p-1 algorithm with the exception that if we failed to succeed with Pollard's p-1 we were left with little recourse but here we have the ability to select a new a new underlying curve and try and again. 
+
+% The next important algorithm in the development of the factoring algorithms is Pollard's p - 1 algorithm.  We know from Fermat's little theorem that $2^{p-1} \equiv 1 mod p$ when p is a prime. Furthermore  if we had an $M = k ( p - 1 ) $ for a constant k then $2^M = 2^{ k  ( p - 1 ) } = ( 2^{ p -1 } ) ^ k \equiv 1 mod p$. If this is a particular prime p such that $p | n$ then since $ p | 2^M - 1 $ $ p | gcd ( 2^M - 1 , n )$. We can use this factor n, the trick is to pick M properly. This algorithm fails if $gcd ( 2^M - 1 , n )  = n$. This algorithm is interesting because the spirit of this algorithm is used again in the Elliptic Curve Method. 
+
+% The premiere method to factor a number n is called the Elliptic curve method.   Elliptic curves originally were studied by analysts in the 19th and early 20th centuries but they can be used with fantastic effectiveness in the arena of factoring. In this context what we care about is curves defined by $y^2 = x^3 + ax + b$ with a and b $\in \Z _n$ and a special point at infinity. When n is a prime this construction yields a group of points (x,y) on this curve but when n is not prime this is not a group. This factoring algorithm works over the idea of trying to finding a failure of this group via an element that is not convertible. From this failure we can actually find a factor of n. This algorithm works in an analogous way to Pollard's p-1 algorithm with the exception that if we failed to succeed with Pollard's p-1 we were left with little recourse but here we have the ability to select a new a new underlying curve and try and again. 
  
  
 \section{Primality Proving}
@@ -443,7 +448,8 @@ This constitutes the core strategy of the NFS and for a full treatment into how 
         B' = sum( [len(R(p)) for p in P]
         V = 1 + pi(B) + B' + k
         M = B
-        #Sieve(F,G, B, k) finds a set of comprime integer pairs with with F(a,b) G(a,b) being B-smooth until k are collected
+        #Sieve(F,G, B, k) finds a set of comprime
+        #integer pairs with with F(a,b) G(a,b) being B-smooth until k are collected
         S = {}
         while(len(S) < V):
             S = Sieve(F,G,B, V)
@@ -574,7 +580,7 @@ For the basic variant of the ECM the best way a curve is actually to pick on tha
 The expected complexity of the ECM depends on the size of the least prime factor of n. Specially, the expected runtime is $L(p)^{\sqrt{2} + o(1)}$. So the worst case is if we are asked to factor a composite made up of two roughly equal sized primes. In this case the expected run time is $L(n)^{1 + o(1)}$ the same runtime as the quadratic sieve. 
 
 \section{Conclusion}
-In this paper, I have provided a survey to the field of primality proving and factoring and the mathematics that goes behind them. Of primary importance were the AKS primality proving algorithm, the quadratic sieve, the number field sieve and the elliptic curve method. There has been a lot of work on special enhancements to the factoring that can be made to these algorithms to truly to turn what has been described here to the state of the art algorithms for factoring for instance in the Quadratic Sieve there is the double large prime variation and in the elliptic curve method there are more sophisticated ways of picking a curve and of doing the elliptic curve arithmetic computationally. But after this paper, the interested reader should be well prepared to delve into these improvements. 
+In this paper, we have seen how the fundamental methods of modern day factoring and primality proving have developed. There are several different paths that could be taken after reading this paper. For the computationally interested, there are several improvements that can be effected to take this methods further. There are improvements that can be made to the quadratic sieve\cite{pomerance1984quadratic}\cite{lenstra1994factoring}, the number field sieve\cite{murphy1998modelling}, and the Elliptic Curve Method\cite{montgomery1992fft}\cite{brent2000three}. The is also the open question on if there are better tests that are based on the ideas that we have already explored here like how the elliptic curve method works on a similar goal as Pollard's p-1. 
 \bibliography{sources}
 \bibliographystyle{ieeetr}
 \end{document}
