--- a/sources.bib
+++ b/sources.bib
@@ -170,3 +170,49 @@ isbn="978-3-540-39757-1"
   year={1996},
   publisher={BIRKHAEUSER}
 }
+
+@article{lenstra1994factoring,
+  title={Factoring with two large primes},
+  author={Lenstra, Arjen K and Manasse, Mark S},
+  journal={mathematics of computation},
+  volume={63},
+  number={208},
+  pages={785--798},
+  year={1994}
+}
+
+@inproceedings{pomerance1984quadratic,
+  title={The quadratic sieve factoring algorithm},
+  author={Pomerance, Carl},
+  booktitle={Workshop on the Theory and Application of of Cryptographic Techniques},
+  pages={169--182},
+  year={1984},
+  organization={Springer}
+}
+
+@inproceedings{murphy1998modelling,
+  title={Modelling the yield of number field sieve polynomials},
+  author={Murphy, Brian},
+  booktitle={International Algorithmic Number Theory Symposium},
+  pages={137--150},
+  year={1998},
+  organization={Springer}
+}
+
+
+@article{brent2000three,
+  title={Three new factors of Fermat numbers},
+  author={Brent, R and Crandall, R and Dilcher, Karl and Van Halewyn, Christopher},
+  journal={Mathematics of computation},
+  volume={69},
+  number={231},
+  pages={1297--1304},
+  year={2000}
+}
+
+@phdthesis{montgomery1992fft,
+  title={An FFT extension of the elliptic curve method of factorization},
+  author={Montgomery, Peter Lawrence},
+  year={1992},
+  school={UCLA}
+}
